# PyTrainApi

./: .gitignore  CHANGELOG.md  README.md  privacy.html  pyproject.toml  requirements.txt  tox.ini  uvicorn.ini
.github/workflows/: python-package.yml
cli/: pytrain_api.py
pytrain-api-docs/: openapi.json
src/: __init__.py
src/pytrain_api/: __init__.py  alexa_skill.json  endpoints.py  fastapi_ex.py  flask_ex.py  hello.py  make_api_service.py  pytrain_api.py  pytrain_component.py  pytrain_info.py  pytrain_server.py
src/pytrain_api/static/: pytrain_api.bash.template
test/: requirements.txt
tests/: requirements.txt
tests/pytrain_api/: test_pytrain_api.py  test_pytrain_component.py
